2023-08-07T08:10:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5782637391 # 1794
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 34 59
* notice: prev accum: outdated-unq outdated-all / unq all: 1437 4873 / 1475 4926
* notice: next accum: outdated-unq outdated-all / unq all: 1437 4873 / 1480 4932
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [] / [2023-08-07]

2023-08-07T00:43:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5779697018 # 1793
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 30 53
* notice: prev accum: outdated-unq outdated-all / unq all: 1436 4871 / 1474 4925
* notice: next accum: outdated-unq outdated-all / unq all: 1437 4873 / 1475 4926
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-23] / [2023-08-06]

2023-08-06T00:38:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5773618291 # 1790
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-06
* notice: last 14d: unq all: 29 54
* notice: prev accum: outdated-unq outdated-all / unq all: 1435 4869 / 1470 4921
* notice: next accum: outdated-unq outdated-all / unq all: 1436 4871 / 1474 4925
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +6 +6 -0 -0 / 6 6
* notice: removed / changed dates: [2023-07-22] / [2023-08-05]

2023-08-05T16:08:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5771611752 # 1789