@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-07T08:10:28Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 5, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2023-08-07T16:09:26Z",
+  "count" : 17,
+  "count_minmax" : [ 6, 17 ],
+  "count_decinc" : [ -0, +17 ],
+  "uniques" : 11,
+  "uniques_minmax" : [ 5, 11 ],
+  "uniques_decinc" : [ -0, +11 ]
 }
