@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-07T08:10:28Z",
+  "timestamp" : "2023-08-07T16:09:26Z",
   "count_outdated" : 4873,
   "uniques_outdated" : 1437,
-  "count" : 4932,
-  "uniques" : 1480,
+  "count" : 4943,
+  "uniques" : 1486,
   "clones" : [
     {
       "timestamp": "2023-07-24T00:00:00Z",
@@ -115,12 +115,12 @@
     },
     {
       "timestamp": "2023-08-07T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "count": 17,
+      "count_minmax": [ 6, 17 ],
+      "count_decinc": [ 0, 17 ],
+      "uniques": 11,
+      "uniques_minmax": [ 5, 11 ],
+      "uniques_decinc": [ 0, 11 ]
     }
   ]
 }
