@@ -1,6 +1,6 @@
 {
-  "count": 59,
-  "uniques": 34,
+  "count": 70,
+  "uniques": 39,
   "clones": [
     {
       "timestamp": "2023-07-24T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2023-08-07T00:00:00Z",
-      "count": 6,
-      "uniques": 5
+      "count": 17,
+      "uniques": 11
     }
   ]
 }
