@@ -1,3 +1,12 @@
+2023-08-07T16:09:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5787404816 # 1795
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
+* notice: last 14d: unq all: 39 70
+* notice: prev accum: outdated-unq outdated-all / unq all: 1437 4873 / 1480 4932
+* notice: next accum: outdated-unq outdated-all / unq all: 1437 4873 / 1486 4943
+* notice: prev exec diff / last date diff / accum: unq all: +6 +11 -0 -0 / +11 +17 -0 -0 / 11 17
+* notice: removed / changed dates: [] / [2023-08-07]
+
 2023-08-07T08:10:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5782637391 # 1794
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
